# Codesign-for-Cruise-Control

./: .gitignore  PLAN.md  README.md  mkdocs.yml  project_status.md  pyproject.toml
configs/: default.yaml
datasets/: expanded_30_10_manifest.csv
docs/: index.md
docs/architecture/: data-flow.md  system-overview.md
docs/control/: coordination.md  interfaces.md  mpc.md  pid.md
docs/experiments/: reproducibility.md  scenarios.md
docs/guide/: evidence-summary.md  next-steps.md  project-logic.md
docs/javascripts/: mermaid.js
docs/models/: energy.md  hardware.md
docs/optimization/: codesign.md  expanded-generality.md  generality-dataset.md  hardware-sensitivity.md  matched-rmse-test.md  mountain-shuttle.md  mpc-tuning.md  separate-design.md
docs/reference/: configuration.md  files.md  traceability.md
docs/simulation/: metadrive.md
docs/validation/: actuator-validation.md  braking.md  evidence.md
src/codesign/: __init__.py  braking_validation.py  calibration.py  co_design.py  config.py  controllers.py  efficiency.py  expanded_generality.py  generality_dataset.py  hardware_sensitivity.py  hardware_sizing.py  matched_rmse_test.py  metadrive_env.py  mountain_shuttle.py  mpc.py  mpc_cli.py  mpc_sweep.py  optimization.py  powertrain.py  scenario_cli.py  scenario_comparison_gifs.py  scenario_gifs.py  scenarios.py  separate_optimization.py  smoke.py  speed_planner.py  steering_validation.py  trained_hardware_controller_sweep.py  trajectory_animation.py  validation_cli.py
tests/: test_co_design.py  test_config.py  test_controllers.py  test_efficiency.py  test_expanded_generality.py  test_generality_dataset.py  test_hardware_sensitivity.py  test_hardware_sizing.py  test_matched_rmse_test.py  test_mountain_shuttle.py  test_mpc.py  test_mpc_sweep.py  test_optimization.py  test_powertrain.py  test_scenarios.py  test_separate_optimization.py  test_speed_planner.py  test_steering_validation.py  test_trained_hardware_controller_sweep.py
