[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codesign-cruise-control"
version = "0.1.0"
description = "Hardware-controller co-design for energy-efficient autonomous EV cruise control"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "numpy>=1.26,<3",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
simulation = [
  "gymnasium>=0.29,<2",
  "metadrive-simulator==0.4.3",
]
optimization = [
  "cvxpy>=1.4,<2",
  "optuna>=3.6,<5",
  "osqp>=0.6,<2",
  "pandas>=2.1,<3",
  "scipy>=1.11,<2",
]
visualization = [
  "matplotlib>=3.8,<4",
  "plotly>=5.18,<7",
]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
]
all = [
  "codesign-cruise-control[simulation,optimization,visualization,dev]",
]

[project.scripts]
codesign-calibrate = "codesign.calibration:main"
codesign-scenario = "codesign.scenario_cli:main"
codesign-smoke = "codesign.smoke:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
